--- a/pomidor/o-kotach.html
+++ b/pomidor/o-kotach.html
@@ -25,27 +25,41 @@
             </nav>
             <a class="cta" href="#"><button>Kontakt do prezesa  </button></a>
         </header>       
-        <container>
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12">
-                    <div class="main-banner-content">
-                        <h1>Zagadki kotów &amp;  innych kotów</h1>
-                        <p>Niektórzy twierdzą że koty są podobne do psów, ale śa ich takimi damskimi wersjami "bo mają humorki :D" chcesz sie dowiedzieć więcej? kliknij w link poniżej.</p>
-                        <div class="banerek-btn">
-                            <a href="O-kotach.html" class="deafult_btn">O kotach
-                                <span></span>
-                            </a>
-                            <a class="deafult_one_btn" href="Daj_znac.html">Dowiedz się wiecej</a>
-                        </div>
+                <koty>
+                    <div class="belgijski">
+                        <img src="images/belgijski.jpg" id="beligjski">
+                        <h1>Kot Brytyjski</h1>
+                        <a1>Rasa kota, której początki wywodzą od kotów sprowadzonych na Wyspy Brytyjskie przez legiony rzymskie, wykorzystujące je do walki ze szczurami. Legendy tej nie udało się jednak udowodnić. Faktem jest, że rasa wywodzi się od kotów domowych zamieszkujących Wielką Brytanię.
+
+                        </a>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="banner-image">
-                        <img src="glowna.png" alt="image" id="image">
+
+                    <div class="bengalski">
+                        <img src="images/bengalski.jpg" id="bengalski">
+                        <h1>Kot bengalski</h1>
+                        <a2>Rasa kota pochodząca ze Stanów Zjednoczonych, powstała w wyniku skrzyżowania kotka bengalskiego z kotem domowym. Jest zaliczana do grupy kotów orientalnych.</a>
                     </div>
-                </div>
-            </div>
-        </container>    
+
+                    <div class="maine-coon">
+                        <img src="images/Maine_Coon.jpg" id="maine-coon">
+                        <h1>Maine Coon</h1>
+                        <a2>Rasa kota pochodząca z Ameryki Północnej. Koty rasy maine coon wyróżnia wielkość, inteligencja i żywiołowość.</a>
+                    </div>
+
+                    <div class="ragdoll">
+                        <img src="images/ragdoll.jpg" id="ragdoll">
+                        <h1>Ragdoll</h1>
+                        <a2>Rasa kota zaliczana do kotów półdługowłosych. Nazwa rasy wynika z opinii, według której gdy ragdolla weźmie się na ręce, kot odpręża się, rozluźnia mięśnie i staje się uległy w stopniu przewyższającym inne rasy kotów.</a>
+                    </div>
+                    
+
+
+
+
+                </koty>
+
+
+
         
         <footer>
             <div class="footer-content">
