--- a/br/theme/login-form.html
+++ b/br/theme/login-form.html
@@ -1,5 +1,5 @@
 <form action="login.php" method="POST">
     Login: <input type="text" name="login"><br>
     Haslo: <input type="password" name="password"><br>
-    <input type ="submit" value="zaloguj">
+    <input type ="submit" value="Zaloguj">
 </form> 
